css/main.css
/* main.css */

/* temp styling while laying out */
/** {
  outline: red 1px solid;
}*/

@font-face {
    font-family: comical;
    src: url('../fonts/animeace2_reg.otf');
}

body {
  background-color: #000;
  font-family: comical;
}

.main {
  background-color: white;
  margin-top: 110px;
  padding-left: 0px;
  min-width: 1341px;
  height: 500px;
  position: relative;
  z-index: 1;
}

.ryu {
  /* same dimensions as images */
  width: 659px;
  height: 494px;
  /* I added below */
  position: relative; 
}

.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
  width: 659px;
  height: 494px;
  position: absolute;
  top: 0;
  left: 0;
}

.ryu-ready, .ryu-throwing, .ryu-cool {
  display: none;
} 

.ryu-ready {
  background-image: url('../images/ryu-ready-position.gif');
}

.ryu-still {
  background-image: url('../images/ryu-standing-still.png');
}

.ryu-throwing {
  background-image: url('../images/ryu-throwing-hadouken.png');
}

.ryu-cool {
  background-image: url('../images/ryu-cool.gif');
}

.hadouken, .kapow, .ryu-ready, .ryu-still, .ryu-throwing {
  /* somewhat unnecessary since we set containing divs to be exact size of images */
  background-repeat: no-repeat;
}

.hadouken {
  background-image: url('../images/hadouken.gif');
  width: 156px; 
  height: 90px;
  display: none;
  float: left;
  position: absolute;
  top: 173px;
  left: 440px;
  z-index: 10;
}

.kapow {
  background-image: url('../images/kapow_350x254.png');
  width: 350px;
  height: 254px;
  position: absolute;
  top: 90px;
  left: 800px;
  z-index: 11;
  opacity: 0;
}

.bad-ass-sound {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 99;
}

.main-rhs {
  position: absolute;
  top: 0;
  left: 660px;
  /* width of widest image - sf-logo.png */
  width: 682px;
}

.sf-logo {
  position: absolute;  
  background-image: url('../images/sf-logo.png');
  width: 682px;
  height: 314px;
  /* below: (500px-314px)/2 */
  top: 93px;
  left: 0;
  /*display: none;*/
  opacity: 0;
}

.jquery-logo {
  position: absolute;  
  background-image: url('../images/jquery-logo.png');
  width: 500px;
  height: 172px;
  top: 164px;
  left: 91px;
  display: none;
}

.segue {
  position: absolute;
  width: 600px;
  /*height: 100px;*/
  top: 180px;
  left: 41px;
  text-align: center;
  color: #f00;
  font-size: 3em;
  line-height: 1.5em;
  display: none;
}

.instructions {
  position: absolute;
  width: 600px;
  height: 400px;
  top: 50px;
  left: 41px;
  font-size: 1.5em;
  line-height: 1.75em;
  display: none;
}

.instructions p {
  width: 320px;
  position: absolute;
}

.instructions span {
  color: #f00;
}

.instructions p:nth-child(1) {
  top: 0;
  left: 0;
}

.instructions p:nth-child(2) {
  bottom: 0;
  right: 0;
  z-index: 99;
}

.instructions p:nth-child(2):hover {
  cursor: pointer;
}

.no-tread {
  position: absolute;
  background: center bottom no-repeat url('../images/Dont-Tread-On-Me_517x400.png');
  width: 517px;
  height: 460px;
  top: 25px;
  left: 82px;
  display: none;
  cursor: pointer;
  z-index: 99;
}

.no-tread p {
  position: absolute;
  top: 0;
  font-size: 1.2rem;
}

.elementShow {
  display: block;
}

.elementHide {

}

